--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -23,6 +23,7 @@
                 </tr>
                 </thead>
                 <tbody>
+                <!-- Sakshi Bharti (300991470) BooksList -->
                 <!-- Template Row -->
                 <% for (let count = 0; count < books.length; count++) { %>
                 <tr>
