--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -13,6 +13,7 @@
   <body>
 
   <nav class="navbar navbar-inverse" role="navigation">
+  <!-- Sakshi Bharti (300991470) BooksList -->
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -23,7 +24,7 @@
       </button>
       <a class="navbar-brand" href="/"><i class="fa fa-bookmark-o"></i> My Favourite Books</a>
     </div>
-
+<!-- Sakshi Bharti (300991470) BooksList -->
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
