--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -1,5 +1,5 @@
 <% include ../partials/header.ejs %>
-
+<!-- Sakshi Bharti (300991470) BooksList -->
     <!-- MAIN CONTENT -->
     <div class="container">
       <div class="row">
