--- a/server/views/books/index.ejs
+++ b/server/views/books/index.ejs
@@ -36,7 +36,8 @@
                     <!-- ------------------------ -->
                     <!-- ADD the EDIT BUTTON HERE -->
                     <!-- ------------------------ -->
-                    
+                    <a href = "books/<%= books[count]._id %>" 
+            class="btn btn-primary"><i class="fa fa-pencil-square-o"></i>Edit</a>
                      
                   </td>
 
@@ -44,7 +45,8 @@
                     <!-- ------------------------ -->
                     <!-- ADD the DELETE BUTTON HERE -->
                     <!-- ------------------------ -->
-                    
+                    <a href = "books/delete/<%= books[count]._id %>"
+            class="btn btn-danger"><i class="fa fa-trash-o"></i> Delete</a>  
                     
                   </td>
                 </tr>
